apps/servicex/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: servicex
  namespace: servicex
spec:
  hosts:
    - servicex.cb-interview.com
  gateways:
    - istio-system/istio-ingressgateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: servicex.servicex.svc.cluster.local
            port:
              number: 8080
